# sscg

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  _RUN.bat  _run.sh  _test.sh  main.wl  sscg_save.json  tst.wl  update_proj_assets.sh
assets/: mockup_packing_gui.xcf
assets/blender_templates/: iso_obejct_template.blend  iso_obejct_template.blend1  iso_obejct_template_cycles.blend  iso_space_object_template_cycles.blend  iso_template.blend  iso_template.blend1  iso_template_cycles.blend  killme2.blend
assets/images/: crosshair.xcf
assets/iso_tests/: seasons_tiles.tsx  test.tsx  untitled.blend  untitled.tmx
doc/: GAME_DESIGN.md  audio_design.md  game_design.md  game_design_and_core_loop_diagram.odg
gamelib/: clock.wl  wordgen.wl  wordlib.wl
godot_bind/: Cargo.toml  _RUN.bat  _TEST.bat  _run.sh  _run_rel.sh  _test.sh
godot_bind/src/: gd_voxel_impl.rs  lib.rs  state.rs  system_map.rs  util.rs  voxel_structure.rs  voxel_vol.rs  voxeltree.rs  voxeltree_wlambda.rs  wl_gd_mod_resolver.rs
godot_bind/src/gui/: game_painter.rs  logic.rs  mod.rs  tree_painter.rs  widgets.rs  wlambda_api.rs
godot_project/: 0001.png.import  MainMap.gdns  MainMap.tscn  MultiMeshInstance.gd  Node2D.gd  Node2D.gdns  Station.tscn  TestBillBoardTextViewport.tscn  crosshair.png.import  default_bus_layout.tres  default_env.tres  elements.csv.import  export_presets.cfg  pat.wl  project.godot  sky10001.png.import  test.tscn  test.txt
godot_project/.import/: 0001.png-5bf5ed4c39f12a5ba5ea1802985874f4.md5  0001.png-5bf5ed4c39f12a5ba5ea1802985874f4.stex  ship_1.glb-0951619462bc0c7739215be0a905fb46.md5  ship_1.glb-0951619462bc0c7739215be0a905fb46.scn  ship_1.glb-de0b98cf0a1dcfef4d6c70b8851a040a.md5  ship_1.gltf-ea8494574d015f23e9d9a48ad9a7d3b0.md5  ship_1.gltf-ea8494574d015f23e9d9a48ad9a7d3b0.scn  ship_2.glb.gltf-cbeb05536ad3bdc1d16dbdabecbea44c.md5  sky10001.png-0a22ce0193258fbebfda3df92232c590.md5  sky10001.png-0a22ce0193258fbebfda3df92232c590.stex
godot_project/blender_imports/: Body_001.material  Cockpit_001.material  Edge Red Lights.material  Lighty_001.material  Loadingbay.material  Main Hull.material  MapMaterial.material  Material.material  Primary Color_001.material  Windows.material  crosshair.glb  crosshair.glb.import  factory_coil.material  factory_floor.material  map_box.glb  (+11 more)
res/: SDL2_gfx.lib
scripts/: calc_costs.wl  calc_fission.txt  calc_fission.wl  calc_fusion.txt  calc_fusion.wl  calc_markov.wl  elements.csv  elements.wl  elements_adjusted.csv  elements_github_trangar_periodic_table.csv  ffmpeg_gif.sh  input.txt  simulate_node_factory.wl
src/: gui.rs  logic.rs  main.rs  sdl_painter.rs  tree_painter.rs  util.rs  wlambda_api.rs
sscg_game/: CHANGELOG.md  Cargo.toml  main.wl  sscg_save.json
(+144 files in other folders)
