[package]
name = "sscg_gd"
version = "0.1.0"
authors = ["weictr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
palette     = "0.5"
gdnative = { path = "../../other/godot-rust/gdnative" }
sscg     = { path = "../sscg_game" }
wlambda  = { path = "../../wlambda" }
euclid   = "0.20.1"

[lib]
crate-type = ["cdylib"]
