[package]
name    = "sscg_gd"
version = "0.2.0"
authors = ["weictr"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
palette     = "0.5"
gdnative    = "0.7.0"
regex       = "1.3.3"
wlambda     = "0.6.2-beta"
euclid      = "0.20.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true

[patch.crates-io]
wlambda = { path = "../../WLambda" }
